Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76748

Invalid color formatting using OpenGL Widgets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.5
    • 5.12.3
    • GUI: OpenGL, QPA: EGLFS
    • None
    • Qualcomm Adreno
    • Linux/Wayland

    Description

      We faced a problem caused by invalid color formatting using OpenGL Widgets on our board. We are using EGLFS platform integration plugin and Qualcomm Adreno GPU.

      We have a sample application which we are used to render GL based picture on different platforms with the same color (QColor themeColor(0, 231, 255)): 

      1. If we are running this app under host machine with Ubuntu we see a correct color (LightBlue).
      2. If we are running the same app under our board we see on the screen that the color format is different now (looks like BGR instead of RGB) and the result image have Yellow color. 

      I collected app run logs and saw that native color format which is detected on our board is XB24 (DRM_FORMAT_XBGR8888) so that could be the case of the output color format changing.

      However if we are running application with QML based scene the color formatting works fine and all colors are the same as they set in the qml file (on host machine and on target board).

      I uploaded all necessary data here: \\psaftp.harman.com\FTP\qt\ftp_data\From_Harman\gl_widgets

      As disscussed with Janne Koskinen, there might be some problems with native formatting.

      Attachments

        For Gerrit Dashboard: QTBUG-76748
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            nkrasnoyarov NIKITA KRASNOYAROV
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes