eglfs/kms: Re-enable drm/gbm format overrides in the config file

Follow up to 091a386eaf91ad8932332a8aefc2df793de59f6c

Defaulting to querying from the egl config is fine, but dropping support
for the "format" key in the output list in the json config file is not
ideal.

Task-number: QTBUG-76748
Change-Id: I25dc99369d118c300cdef25b464426f6be85453b
Reviewed-by: Johan Helsing <johan.helsing@qt.io>